[metadata]
version = 3.0.1
name = plone.app.mosaic
description = Plone Mosaic Site Builder and Site Layout
long_description = file: README.rst, CHANGES.rst
classifiers=
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Plone
    Framework :: Plone :: 6.0
    Framework :: Plone :: Addon
    Framework :: Zope :: 5
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules
url = https://github.com/plone/plone.app.mosaic.git
license = GPL
keywords = site builder collage
author = The Plone Community
author_email = foundation@plone.org
maintainer = Plone Foundation
maintainer_email = releasemanager@plone.org


[check-manifest]
ignore =
    .coveragerc
    .editorconfig
    .gitattributes

[isort]
profile = black
force_alphabetical_sort = true
force_single_line = true
lines_after_imports = 2

[flake8]
ignore =
    W503,
    C812,
    E501,
    C815
exclude = bootstrap.py,docs,*.egg.,omelette,bin,parts,eggs,var
max-complexity = 15
